--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta property="og:type" content="website">
     <meta name="title" property="og:title" content="Wandern">
-    <meta name="image" property="og:image" content="https://wanderntrails.com/resources/images/favicon.ico">
+    <meta name="image" property="og:image" content="https://wandern.netlify.app/resources/images/logo-no-text.svg">
     <meta name="description" property="og:description" content="Plan your trail accommodation. For hikers to easily find and reserve huts and campsites on popular trails.">
     <meta name="author" content="Alizeh Khan & Seyhan Van Khan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="/resources/images/favicon.ico">
-    <link rel="stylesheet" href="/resources/css/main.css" >
+    <link rel="shortcut icon" href="resources/images/logo-no-text.svg">
+    <link rel="stylesheet" href="resources/css/index.css" >
+    <script defer src="resources/js/index.js"></script>
     <title>Wandern</title>
   </head>
 
