Update title to include slogan

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta property="og:type" content="website">
-    <meta name="title" property="og:title" content="Wandern">
+    <meta name="title" property="og:title" content="Wandern | Plan your trail accommodation">
     <meta name="image" property="og:image" content="https://wandern.netlify.app/resources/images/logo-no-text.svg">
-    <meta name="description" property="og:description" content="Plan your trail accommodation. For hikers to easily find and reserve huts and campsites on popular trails.">
+    <meta name="description" property="og:description" content="For hikers to easily find and reserve mountain huts and campsites on popular trails.">
     <meta name="author" content="Alizeh Khan & Seyhan Van Khan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="resources/images/logo-no-text.svg">
     <link rel="stylesheet" href="resources/css/index.css" >
     <script defer src="resources/js/index.js"></script>
-    <title>Wandern</title>
+    <title>Wandern | Plan your trail accommodation</title>
   </head>
 
 
