file structure css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
     <title>Wandern | Plan your trail accommodation</title>
   </head>
 
-
   <body>
+    <div class="step">
+      <p>1</p>
+      <div class="step-info">
+        <h2>Pick a trail</h2>
+        <p>Explore mountain huts and campsites along on your trail. See the trail’s stages, water sources, and resupply points.</p>
+        <a href="#" class="btn-outlined">Request access</a>
+      </div>
+    </div>
   </body>
 </html>
