--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="resources/images/logo-no-text.svg">
-    <link rel="stylesheet" href="resources/css/index.css" >
+    <link rel="stylesheet" href="assets/stylesheets/index.css" >
     <script defer src="resources/js/index.js"></script>
     <title>Wandern | Plan your trail accommodation</title>
   </head>
