--- a/index.html
+++ b/index.html
@@ -9,19 +9,65 @@
     <meta name="author" content="Alizeh Khan & Seyhan Van Khan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="resources/images/logo-no-text.svg">
-    <link rel="stylesheet" href="assets/stylesheets/index.css" >
-    <script defer src="resources/js/index.js"></script>
+    <link rel="shortcut icon" href="assets/images/logo-no-text.svg">
+    <link rel="stylesheet" href="assets/stylesheets/style.css" >
+    <script defer src="javascript/jquery/jquery.min.js"></script>
     <title>Wandern | Plan your trail accommodation</title>
   </head>
 
   <body>
-    <div class="step">
-      <p>1</p>
-      <div class="step-info">
-        <h2>Pick a trail</h2>
-        <p>Explore mountain huts and campsites along on your trail. See the trail’s stages, water sources, and resupply points.</p>
-        <a href="#" class="btn-outlined">Request access</a>
+    <div class="container">
+      <div class="step">
+        <p>1</p>
+        <div class="step-info">
+          <h2>Pick a trail</h2>
+          <p>Explore mountain huts and campsites along on your trail. See the trail’s stages, water sources, and resupply points.</p>
+          <p onclick="$('html,body').animate({scrollTop:0}, 860)" class="btn-outlined">Request access</p>
+        </div>
+      </div>
+      <div class="step">
+        <p>2</p>
+        <div class="step-info">
+          <h2>Build your itinerary</h2>
+          <p>Check availability and add the campsite or hut, you’d like to stay at, to your itinerary. See your trip unfold on the map.</p>
+          <p onclick="$('html,body').animate({scrollTop:0}, 860)" class="btn-outlined">Request access</p>
+        </div>
+      </div>
+      <div class="step">
+        <p>3</p>
+        <div class="step-info">
+          <h2>Book accommodation</h2>
+          <p>Book all your accommdation in just a few clicks without leaving the site.</p>
+          <p onclick="$('html,body').animate({scrollTop:0}, 860)" class="btn-outlined">Request access</p>
+        </div>
+      </div>
+    </div>
+    <div class="banner-navy">
+      <div class="container features">
+        <div class="feature">
+
+          <p class="feature-title">EXPORT ITINERARY</p>
+          <p class="feature-description">Download your waypoints and route to use on any offline map app.</p>
+        </div>
+        <div class="feature">
+
+          <p class="feature-title">CHECK HIKERS REVIEWS</p>
+          <p class="feature-description">Read previous experiences at campsites and mountain huts from hikers.</p>
+        </div>
+        <div class="feature">
+
+          <p class="feature-title">MANAGE BOOKINGS</p>
+          <p class="feature-description">Message the host or add, amend, and cancel any bookings in your itinerary.</p>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="container">
+
+        <div class="footer-links">
+          <a href="#">Contact</a>
+          <a href="#">Privacy Policy</a>
+        </div>
       </div>
     </div>
   </body>
