--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="assets/images/logo-no-text.svg">
     <link rel="stylesheet" href="assets/stylesheets/style.css" >
     <script defer src="javascript/jquery/jquery.min.js"></script>
+    <script defer src="javascript/index.js"></script>
     <title>Wandern | Plan your trail accommodation</title>
   </head>
 
