--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
   </head>
 
   <body>
+    <div class="banner">
+      <div class="container">
+        <h1 class="title">Plan your trail accommodation</h1>
+        <p class="subtitle">An easy way to find and book mountain huts and campsites on popular hiking trails</p>
+        <input type="text" class="input-email" placeholder="Email me when it’s ready">
+        <input type="submit" class="btn-send">
+      </div>
+    </div>
     <div class="container">
       <div class="step">
         <p>1</p>
