--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="banner">
       <div class="container">
         <h1 class="title">Plan your trail accommodation</h1>
-        <p class="subtitle">An easy way to find and book mountain huts and campsites on popular hiking trails</p>
+        <p class="subtitle">An easy way to find and book mountain huts and campsites on popular hiking trails.</p>
         <input type="text" class="input-email" placeholder="Email me when it’s ready">
-        <input type="submit" class="btn-send">
+        <input type="submit" class="btn-send" value=".">
       </div>
     </div>
     <div class="container">
@@ -54,17 +54,30 @@
     <div class="banner-navy">
       <div class="container features">
         <div class="feature">
-
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-export" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+            <path d="M11.5 21h-4.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v5m-5 6h7m-3 -3l3 3l-3 3" />
+          </svg>
           <p class="feature-title">EXPORT ITINERARY</p>
           <p class="feature-description">Download your waypoints and route to use on any offline map app.</p>
         </div>
         <div class="feature">
-
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-messages" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <path d="M21 14l-3 -3h-7a1 1 0 0 1 -1 -1v-6a1 1 0 0 1 1 -1h9a1 1 0 0 1 1 1v10" />
+            <path d="M14 15v2a1 1 0 0 1 -1 1h-7l-3 3v-10a1 1 0 0 1 1 -1h2" />
+          </svg>
           <p class="feature-title">CHECK HIKERS REVIEWS</p>
           <p class="feature-description">Read previous experiences at campsites and mountain huts from hikers.</p>
         </div>
         <div class="feature">
-
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-edit" width="48" height="48" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <path d="M9 7h-3a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-3" />
+            <path d="M9 15h3l8.5 -8.5a1.5 1.5 0 0 0 -3 -3l-8.5 8.5v3" />
+            <line x1="16" y1="5" x2="19" y2="8" />
+          </svg>
           <p class="feature-title">MANAGE BOOKINGS</p>
           <p class="feature-description">Message the host or add, amend, and cancel any bookings in your itinerary.</p>
         </div>
