changed feature font

--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
     <div class="banner-navy">
       <div class="container features">
         <div class="feature">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-export" width="48" height="48" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-edit" width="48" height="48" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-            <path d="M14 3v4a1 1 0 0 0 1 1h4" />
-            <path d="M11.5 21h-4.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v5m-5 6h7m-3 -3l3 3l-3 3" />
+            <path d="M9 7h-3a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-3" />
+            <path d="M9 15h3l8.5 -8.5a1.5 1.5 0 0 0 -3 -3l-8.5 8.5v3" />
+            <line x1="16" y1="5" x2="19" y2="8" />
           </svg>
-          <p class="feature-title">EXPORT ITINERARY</p>
-          <p class="feature-description">Export your itinerary's waypoints and route for use on any offline map app.</p>
+          <p class="feature-title">Manage Bookings</p>
+          <p class="feature-description">Message the host or add, amend, and cancel any bookings in your itinerary.</p>
         </div>
         <div class="feature">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-messages" width="48" height="48" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -74,18 +75,17 @@
             <path d="M21 14l-3 -3h-7a1 1 0 0 1 -1 -1v-6a1 1 0 0 1 1 -1h9a1 1 0 0 1 1 1v10" />
             <path d="M14 15v2a1 1 0 0 1 -1 1h-7l-3 3v-10a1 1 0 0 1 1 -1h2" />
           </svg>
-          <p class="feature-title">CHECK HIKERS REVIEWS</p>
+          <p class="feature-title">Check Hikers Reviews</p>
           <p class="feature-description">Read previous experiences at campsites and mountain huts from hikers.</p>
         </div>
         <div class="feature">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-edit" width="48" height="48" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-export" width="48" height="48" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-            <path d="M9 7h-3a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-3" />
-            <path d="M9 15h3l8.5 -8.5a1.5 1.5 0 0 0 -3 -3l-8.5 8.5v3" />
-            <line x1="16" y1="5" x2="19" y2="8" />
+            <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+            <path d="M11.5 21h-4.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v5m-5 6h7m-3 -3l3 3l-3 3" />
           </svg>
-          <p class="feature-title">MANAGE BOOKINGS</p>
-          <p class="feature-description">Message the host or add, amend, and cancel any bookings in your itinerary.</p>
+          <p class="feature-title">Export Itinerary</p>
+          <p class="feature-description">Export your itinerary's waypoints and route for use on any offline map app.</p>
         </div>
       </div>
     </div>
@@ -100,8 +100,8 @@
           </svg>
         </a>
         <div class="footer-links">
-          <a href="https://www.privacypolicygenerator.info/live.php?token=4XxYNtKSLyGozW9En7GBWF6SNLpnm8bN">Contact</a>
-          <a href="#">Privacy Policy</a>
+          <a href="#">Contact</a>
+          <a href="https://www.privacypolicygenerator.info/live.php?token=4XxYNtKSLyGozW9En7GBWF6SNLpnm8bN">Privacy Policy</a>
         </div>
       </div>
     </div>
