logo added to banner

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="banner">
       <div class="container">
-        <svg width="75" height="64" viewBox="0 0 75 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg class="logo" width="75" height="64" viewBox="0 0 75 64" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M41.2035 1L44.1664 6.18519L47.1294 1" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
           <path d="M36.0184 22.7778L44.0492 6.44443L59.7221 37.5556H47.8055" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
           <path d="M28.4968 38.5761H15.2779L25.9598 18.2963L38.1105 42L46.389 25.4074" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
