favicons in images

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,8 +17,8 @@
   </head>
 
   <body>
-    <div class="footer">
 
+    <div class="footer">
       <div class="container footer-content">
         <a href="index.html">
           <svg width="64" height="54" viewBox="0 0 75 64" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -30,7 +30,7 @@
         </a>
         <div class="footer-links">
           <a href="#">Contact</a>
-          <a href="https://www.privacypolicygenerator.info/live.php?token=4XxYNtKSLyGozW9En7GBWF6SNLpnm8bN">Privacy Policy</a>
+          <a href="#">Privacy Policy</a>
         </div>
       </div>
     </div>
