Completed Favicon Set

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="utf-8">
     <meta property="og:type" content="website">
     <meta name="title" property="og:title" content="Wandern | Plan your trail accommodation">
-    <meta name="image" property="og:image" content="https://wandern.netlify.app/resources/images/logo-no-text.svg">
+    <meta name="image" property="og:image" content="https://wanderntrails.com/icon.svg">
     <meta name="description" property="og:description" content="For hikers to easily find and reserve mountain huts and campsites on popular trails.">
     <meta name="author" content="Alizeh Khan & Seyhan Van Khan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="assets/images/logo-no-text.svg">
+    <link rel="icon" href="/favicon.ico"><!-- 32×32 -->
+    <link rel="icon" href="/icon.svg" type="image/svg+xml" sizes="any">
+    <link rel="apple-touch-icon" href="/apple.png"><!-- 180×180 -->
+    <link rel="manifest" href="/manifest.webmanifest">
+
     <link rel="stylesheet" href="assets/stylesheets/style.css" >
-    <script defer src="javascript/jquery/jquery.min.js"></script>
-    <script defer src="javascript/index.js"></script>
+    <!-- <script defer src="javascript/jquery/jquery.min.js"></script> -->
+    <!-- <script defer src="javascript/index.js"></script> -->
     <title>Wandern | Plan your trail accommodation</title>
   </head>
 
@@ -31,11 +35,7 @@
           <input type="text" class="input-email" placeholder="Email me when it’s ready">
           <label class="btn-send">
             <input type="submit">
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-send" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-              <line x1="10" y1="14" x2="21" y2="3" />
-              <path d="M21 3l-6.5 18a0.55 .55 0 0 1 -1 0l-3.5 -7l-7 -3.5a0.55 .55 0 0 1 0 -1l18 -6.5" />
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-send" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><line x1="10" y1="14" x2="21" y2="3" /><path d="M21 3l-6.5 18a0.55 .55 0 0 1 -1 0l-3.5 -7l-7 -3.5a0.55 .55 0 0 1 0 -1l18 -6.5" /></svg>
           </label>
         </form>
       </div>
@@ -95,20 +95,12 @@
           <p class="feature-description">Message the host or add, amend, and cancel any bookings in your itinerary.</p>
         </div>
         <div class="feature">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-messages" width="48" height="48" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-            <path d="M21 14l-3 -3h-7a1 1 0 0 1 -1 -1v-6a1 1 0 0 1 1 -1h9a1 1 0 0 1 1 1v10" />
-            <path d="M14 15v2a1 1 0 0 1 -1 1h-7l-3 3v-10a1 1 0 0 1 1 -1h2" />
-          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-messages" width="48" height="48" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M21 14l-3 -3h-7a1 1 0 0 1 -1 -1v-6a1 1 0 0 1 1 -1h9a1 1 0 0 1 1 1v10" /><path d="M14 15v2a1 1 0 0 1 -1 1h-7l-3 3v-10a1 1 0 0 1 1 -1h2" /></svg>
           <p class="feature-title">Check Hikers Reviews</p>
           <p class="feature-description">Read previous experiences at campsites and mountain huts from hikers.</p>
         </div>
         <div class="feature">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-export" width="48" height="48" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-            <path d="M14 3v4a1 1 0 0 0 1 1h4" />
-            <path d="M11.5 21h-4.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v5m-5 6h7m-3 -3l3 3l-3 3" />
-          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-export" width="48" height="48" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M14 3v4a1 1 0 0 0 1 1h4" /><path d="M11.5 21h-4.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v5m-5 6h7m-3 -3l3 3l-3 3" /></svg>
           <p class="feature-title">Export Itinerary</p>
           <p class="feature-description">Export your itinerary's waypoints and route for use on any offline map app.</p>
         </div>
