--- a/index.html
+++ b/index.html
@@ -40,77 +40,99 @@
         </form>
       </div>
     </div>
-    <div class="container">
-      <p id="steps-title">How it works</p>
-      <div class="step">
-        <div class="step-info">
-          <p class="step-info-number">1</p>
-          <div class="step-info-words">
-            <h2>Pick a trail</h2>
-            <p>Explore mountain huts and campsites along on your trail. See the trail’s stages, water sources, and resupply points.</p>
-            <p onclick="$('html,body').animate({scrollTop:0}, 860)" class="btn-outlined">Request access</p>
+
+    <div class="grey-background">
+      <div class="container">
+        <div class="step">
+          <div class="step-info">
+            <p class="step-info-number">1</p>
+            <div class="step-info-words">
+              <h2>Pick a trail</h2>
+              <p>Explore mountain huts and campsites along on your trail. See the trail’s stages, water sources, and resupply points.</p>
+              <p onclick="$('html,body').animate({scrollTop:0}, 860)" class="btn-outlined">Request access</p>
+            </div>
           </div>
-        </div>
-        <div class="step-image">
-          <img src="assets/images/step-1.jpg" alt="Preview of map with trail route and waypoints">
+          <div class="step-image">
+            <img src="assets/images/step-1.png" alt="Preview of map with trail route and waypoints">
+          </div>
         </div>
       </div>
-      <div class="step reverse">
-        <div class="step-info">
-          <p class="step-info-number">2</p>
-          <div class="step-info-words">
-            <h2>Build your itinerary</h2>
-            <p>Check availability and add the campsite or hut, you’d like to stay at, to your itinerary. See your trip unfold on the map.</p>
-            <p onclick="$('html,body').animate({scrollTop:0}, 860)" class="btn-outlined">Request access</p>
+    </div>
+
+      <div class="container">
+        <div class="step reverse">
+          <div class="step-info">
+            <p class="step-info-number">2</p>
+            <div class="step-info-words">
+              <h2>Build your itinerary</h2>
+              <p>Check availability and add the campsite or hut, you’d like to stay at, to your itinerary. See your trip unfold on the map.</p>
+              <p onclick="$('html,body').animate({scrollTop:0}, 860)" class="btn-outlined">Request access</p>
+            </div>
           </div>
-        </div>
-        <div class="step-image">
-          <img src="assets/images/step-2.jpg" alt="Preview of accommodation cards added to itinerary and availability calendar">
+          <div class="step-image">
+            <img src="assets/images/step-2.jpg" alt="Preview of accommodation cards added to itinerary and availability calendar">
+          </div>
         </div>
       </div>
-      <div class="step">
-        <div class="step-info">
-          <p class="step-info-number">3</p>
-          <div class="step-info-words">
-            <h2>Book accommodation</h2>
-            <p>Book all your accommdation in just a few clicks without leaving the site.</p>
-            <p onclick="$('html,body').animate({scrollTop:0}, 860)" class="btn-outlined">Request access</p>
+
+    <div class="grey-background">
+      <div class="container">
+        <div class="step">
+          <div class="step-info">
+            <p class="step-info-number">3</p>
+            <div class="step-info-words">
+              <h2>Book accommodation</h2>
+              <p>Book all your accommdation in just a few clicks without leaving the site.</p>
+              <p onclick="$('html,body').animate({scrollTop:0}, 860)" class="btn-outlined">Request access</p>
+            </div>
           </div>
-        </div>
-        <div class="step-image">
-          <img src="assets/images/step-3.jpg" alt="Preview of reservations window">
+          <div class="step-image">
+            <img src="assets/images/step-3.jpg" alt="Preview of reservations window">
+          </div>
         </div>
       </div>
     </div>
     <div class="banner-navy">
       <div class="container features">
         <div class="feature">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-edit" width="48" height="48" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-            <path d="M9 7h-3a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-3" />
-            <path d="M9 15h3l8.5 -8.5a1.5 1.5 0 0 0 -3 -3l-8.5 8.5v3" />
-            <line x1="16" y1="5" x2="19" y2="8" />
-          </svg>
-          <p class="feature-title">Manage Bookings</p>
-          <p class="feature-description">Message the host or add, amend, and cancel any bookings in your itinerary.</p>
+          <div>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-edit" width="48" height="48" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <path d="M9 7h-3a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-3" />
+              <path d="M9 15h3l8.5 -8.5a1.5 1.5 0 0 0 -3 -3l-8.5 8.5v3" />
+              <line x1="16" y1="5" x2="19" y2="8" />
+            </svg>
+          </div>
+          <div>
+            <p class="feature-title">Manage Bookings</p>
+            <p class="feature-description">Message the host or add, amend, and cancel any bookings in your itinerary.</p>
+          </div>
         </div>
         <div class="feature">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-messages" width="48" height="48" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-            <path d="M21 14l-3 -3h-7a1 1 0 0 1 -1 -1v-6a1 1 0 0 1 1 -1h9a1 1 0 0 1 1 1v10" />
-            <path d="M14 15v2a1 1 0 0 1 -1 1h-7l-3 3v-10a1 1 0 0 1 1 -1h2" />
-          </svg>
-          <p class="feature-title">Check Hikers Reviews</p>
-          <p class="feature-description">Read previous experiences at campsites and mountain huts from hikers.</p>
+          <div>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-messages" width="48" height="48" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <path d="M21 14l-3 -3h-7a1 1 0 0 1 -1 -1v-6a1 1 0 0 1 1 -1h9a1 1 0 0 1 1 1v10" />
+              <path d="M14 15v2a1 1 0 0 1 -1 1h-7l-3 3v-10a1 1 0 0 1 1 -1h2" />
+            </svg>
+          </div>
+          <div>
+            <p class="feature-title">Check Hikers Reviews</p>
+            <p class="feature-description">Read previous experiences at campsites and mountain huts from hikers.</p>
+          </div>
         </div>
         <div class="feature">
-          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-export" width="48" height="48" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-            <path d="M14 3v4a1 1 0 0 0 1 1h4" />
-            <path d="M11.5 21h-4.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v5m-5 6h7m-3 -3l3 3l-3 3" />
-          </svg>
-          <p class="feature-title">Export Itinerary</p>
-          <p class="feature-description">Export your itinerary's waypoints and route for use on any offline map app.</p>
+          <div>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-export" width="48" height="48" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+              <path d="M11.5 21h-4.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v5m-5 6h7m-3 -3l3 3l-3 3" />
+            </svg>
+          </div>
+          <div>
+            <p class="feature-title">Export Itinerary</p>
+            <p class="feature-description">Export your itinerary's waypoints and route for use on any offline map app.</p>
+          </div>
         </div>
       </div>
     </div>
