--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta property="og:type" content="website">
     <meta name="title" property="og:title" content="Wandern | Plan your trail accommodation">
-    <meta name="image" property="og:image" content="https://wanderntrails.com/icon.svg">
+    <meta name="image" property="og:image" content="https://wanderntrails.com/favicon.ico">
     <meta name="description" property="og:description" content="For hikers to easily find and reserve mountain huts and campsites on popular trails.">
     <meta name="author" content="Alizeh Khan & Seyhan Van Khan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="icon" href="/favicon.ico"><!-- 32×32 -->
     <link rel="icon" href="/icon.svg" type="image/svg+xml" sizes="any">
-    <link rel="apple-touch-icon" href="/apple.png"><!-- 180×180 -->
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
     <link rel="manifest" href="/manifest.webmanifest">
 
     <link rel="stylesheet" href="assets/stylesheets/style.css" >
