--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="/manifest.webmanifest">
 
     <link rel="stylesheet" href="assets/stylesheets/style.css" >
-    <!-- <script defer src="javascript/jquery/jquery.min.js"></script> -->
+    <script defer src="javascript/jquery/jquery.min.js"></script>
     <!-- <script defer src="javascript/index.js"></script> -->
     <title>Wandern | Plan your trail accommodation</title>
   </head>
