Added email link to contact

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           </svg>
         </a>
         <div class="footer-links">
-          <a href="#">Contact</a>
+          <a href="mailto:hello@wanderntrails.com">Contact</a>
           <a href="#">Privacy Policy</a>
         </div>
       </div>
