--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </svg>
         <h1 class="title">Plan your trail accommodation</h1>
         <p class="subtitle">An easy way to find and book mountain huts and campsites on popular hiking trails.</p>
-        <form action="" id="form-request-access" class="hide-submit">
+        <form action="POST" id="form-request-access" class="hide-submit" data-netlify="true">
           <input type="text" class="input-email" placeholder="Email me when it’s ready">
           <label class="btn-send">
             <input type="submit">
@@ -59,21 +59,21 @@
       </div>
     </div>
 
-      <div class="container">
-        <div class="step reverse">
-          <div class="step-info">
-            <p class="step-info-number">2</p>
-            <div class="step-info-words">
-              <h2>Build your itinerary</h2>
-              <p>Check availability and add the campsite or hut, you’d like to stay at, to your itinerary. See your trip unfold on the map.</p>
-              <p onclick="$('html,body').animate({scrollTop:0}, 1100)" class="btn-outlined">Request access</p>
-            </div>
-          </div>
-          <div class="step-image">
-            <img src="assets/images/step-2.jpg" alt="Preview of accommodation cards added to itinerary and availability calendar">
+    <div class="container">
+      <div class="step reverse">
+        <div class="step-info">
+          <p class="step-info-number">2</p>
+          <div class="step-info-words">
+            <h2>Build your itinerary</h2>
+            <p>Check availability and add the campsite or hut, you’d like to stay at, to your itinerary. See your trip unfold on the map.</p>
+            <p onclick="$('html,body').animate({scrollTop:0}, 1100)" class="btn-outlined">Request access</p>
           </div>
         </div>
+        <div class="step-image">
+          <img src="assets/images/step-2.jpg" alt="Preview of accommodation cards added to itinerary and availability calendar">
+        </div>
       </div>
+    </div>
 
     <div class="grey-background">
       <div class="container">
