--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1 class="title">Plan your trail accommodation</h1>
         <p class="subtitle">An easy way to find and book mountain huts and campsites on popular hiking trails.</p>
         <form action="" id="form-request-access" class="hide-submit">
-          <input type="text" class="input-email" placeholder="Email me when it’s ready">
+          <input type="email" name="email" class="input-email" placeholder="Email me when it’s ready">
           <label class="btn-send">
             <input type="submit">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-send" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><line x1="10" y1="14" x2="21" y2="3" /><path d="M21 3l-6.5 18a0.55 .55 0 0 1 -1 0l-3.5 -7l-7 -3.5a0.55 .55 0 0 1 0 -1l18 -6.5" /></svg>
@@ -59,21 +59,21 @@
       </div>
     </div>
 
-      <div class="container">
-        <div class="step reverse">
-          <div class="step-info">
-            <p class="step-info-number">2</p>
-            <div class="step-info-words">
-              <h2>Build your itinerary</h2>
-              <p>Check availability and add the campsite or hut, you’d like to stay at, to your itinerary. See your trip unfold on the map.</p>
-              <p onclick="$('html,body').animate({scrollTop:0}, 1100)" class="btn-outlined">Request access</p>
-            </div>
-          </div>
-          <div class="step-image">
-            <img src="assets/images/step-2.jpg" alt="Preview of accommodation cards added to itinerary and availability calendar">
+    <div class="container">
+      <div class="step reverse">
+        <div class="step-info">
+          <p class="step-info-number">2</p>
+          <div class="step-info-words">
+            <h2>Build your itinerary</h2>
+            <p>Check availability and add the campsite or hut, you’d like to stay at, to your itinerary. See your trip unfold on the map.</p>
+            <p onclick="$('html,body').animate({scrollTop:0}, 1100)" class="btn-outlined">Request access</p>
           </div>
         </div>
+        <div class="step-image">
+          <img src="assets/images/step-2.jpg" alt="Preview of accommodation cards added to itinerary and availability calendar">
+        </div>
       </div>
+    </div>
 
     <div class="grey-background">
       <div class="container">
