Changed /privacy-policy to /privacy

--- a/privacy.html
+++ b/privacy.html
@@ -4,20 +4,23 @@
     <meta charset="utf-8">
     <meta property="og:type" content="website">
     <meta name="title" property="og:title" content="Wandern | Plan your trail accommodation">
-    <meta name="image" property="og:image" content="https://wandern.netlify.app/resources/images/logo-no-text.svg">
-    <meta name="description" property="og:description" content="For hikers to easily find and reserve mountain huts and campsites on popular trails.">
+    <meta name="image" property="og:image" content="https://wanderntrails.com/favicon.ico">
+    <meta name="description" property="og:description" content="An easy way to find and book mountain huts and campsites on popular hiking trails.">
     <meta name="author" content="Alizeh Khan & Seyhan Van Khan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="assets/images/logo-no-text.svg">
+    <link rel="icon" href="/favicon.ico"><!-- 32×32 -->
+    <link rel="icon" href="/icon.svg" type="image/svg+xml" sizes="any">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
+    <link rel="manifest" href="/manifest.webmanifest">
+
     <link rel="stylesheet" href="assets/stylesheets/style.css" >
     <script defer src="javascript/jquery/jquery.min.js"></script>
-    <script defer src="javascript/index.js"></script>
+
     <title>Privacy Policy | Wandern</title>
   </head>
 
   <body>
-
     <div class="footer">
       <div class="container footer-content">
         <a href="index.html">
@@ -29,8 +32,8 @@
           </svg>
         </a>
         <div class="footer-links">
-          <a href="#">Contact</a>
-          <a href="#">Privacy Policy</a>
+          <a href="mailto:hello@wanderntrails.com">Contact</a>
+          <a href="/privacy">Privacy Policy</a>
         </div>
       </div>
     </div>
