Added HTML5 Address element

--- a/privacy.html
+++ b/privacy.html
@@ -32,7 +32,7 @@
           </svg>
         </a>
         <div class="footer-links">
-          <a href="mailto:hello@wanderntrails.com">Contact</a>
+          <address>hello@wanderntrails.com</address>
           <a href="/privacy">Privacy Policy</a>
         </div>
       </div>
