Added WayScript POST request

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <link rel="stylesheet" href="assets/stylesheets/style.css" >
     <script defer src="javascript/jquery/jquery.min.js"></script>
+    <script defer src="javascript/index.js"></script>
     <title>Wandern | Plan your trail accommodation</title>
   </head>
 
@@ -30,8 +31,8 @@
         </svg>
         <h1 class="title">Plan your trail accommodation</h1>
         <p class="subtitle">An easy way to find and book mountain huts and campsites on popular hiking trails.</p>
-        <form id="form-request-access" class="hide-submit" action="POST">
-          <input type="email" name="email" class="input-email" placeholder="Email me when it’s ready">
+        <form id="form-request-access" class="hide-submit" action="javascript:;" onsubmit="addEmailToAirtable(this)">
+          <input type="email" name="email" class="input-email" placeholder="Email me when it’s ready" required>
           <label class="btn-send">
             <input type="submit">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-send" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><line x1="10" y1="14" x2="21" y2="3" /><path d="M21 3l-6.5 18a0.55 .55 0 0 1 -1 0l-3.5 -7l-7 -3.5a0.55 .55 0 0 1 0 -1l18 -6.5" /></svg>
