Changed meta favicon to icon 192 png

--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta property="og:type" content="website">
     <meta name="title" property="og:title" content="Wandern | Plan your trail accommodation">
-    <meta name="image" property="og:image" content="https://wanderntrails.com/favicon.ico">
+    <meta name="image" property="og:image" content="https://wanderntrails.com/icon-192.png">
     <meta name="description" property="og:description" content="An easy way to find and book mountain huts and campsites on popular hiking trails.">
     <meta name="author" content="Alizeh Khan & Seyhan Van Khan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
   <body>
     <div class="footer">
       <div class="container footer-content">
-        <a href="index.html">
+        <a href="/">
           <svg width="64" height="54" viewBox="0 0 75 64" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M41.2035 1L44.1664 6.18519L47.1294 1" stroke="#828282" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             <path d="M36.0184 22.7778L44.0492 6.44443L59.7221 37.5556H47.8055" stroke="#828282" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
