--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="step-image">
-          <img src="assets/images/step-2.jpg" alt="Preview of accommodation cards added to itinerary and availability calendar">
+          <img src="assets/images/step-2.png" alt="Preview of accommodation cards added to itinerary and availability calendar">
         </div>
       </div>
     </div>
